--- a/K&Etemplate.html
+++ b/K&Etemplate.html
@@ -332,13 +332,15 @@
                                         </div>
                                         <!-- ./End Page Heading -->
                                         <div class="row margin-bottom-30">
+					 <button title="Export Excel" id="ExportButton1" style="padding-left: 0.75rem;background: none;border: none;cursor: pointer;"><i class="fas fa-file-export"></i></button>
                                             <div class="col-xl-12 col-lg-12 margin-bottom-30" style="height: 500px">
                                                 <!-- Chart 10 -->
                                                 <div id="QVChart10" class="qvplaceholder">
                                                     <div class="Loader"></div> TBA
                                                 </div>
                                             </div>
-											 <div class="col-xl-12 col-lg-12" style="height: 500px">
+					<button title="Export Excel" id="ExportButton2" style="padding-left: 0.75rem;background: none;border: none;cursor: pointer;"><i class="fas fa-file-export"></i></button>
+                                           <div class="col-xl-12 col-lg-12" style="height: 500px">
                                                 <!-- Chart 11 -->
                                                 <div id="QVChart11" class="qvplaceholder">
                                                     <div class="Loader"></div> TBA
