--- a/K&Etemplate.html
+++ b/K&Etemplate.html
@@ -1,8 +1,9 @@
 <!doctype html>
 <html lang="en">
+
 <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>K&amp;EMashup </title>
+    <title>KirkLand &amp; Ellis Mashup </title>
     <meta charset="utf-8">
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta name="HandheldFriendly" content="True">
@@ -34,6 +35,7 @@
     <script src="js/functionality/functionality.js"></script>
 </head>
 <!-- ************************************************* Body Section ************************************************* -->
+
 <body>
     <!-- Overlay for filter panel, must be placed direct after the opening body tag. -->
     <div class="bs-canvas-overlay bs-canvas-anim position-fixed w-100 h-100" data-offset="true" data-overlay="false">
@@ -105,6 +107,7 @@
                                         aria-controls="nav-table" aria-selected="false"><span class="icon"><i
                                                 class="fas fa-table" aria-hidden="true"></i></span><span
                                             class="title">TABLE</span></a>
+
                                 </div>
                             </li>
                         </ul>
@@ -135,7 +138,8 @@
                                         <div class="container-fluid margin-bottom-30">
                                             <!-- Page Heading -->
                                             <div class="d-sm-flex align-items-center justify-content-between mb-4">
-                                                <h1 class="h4 mb-0 text-uppercase" style="color:var(--headertext-theme1)">Dashboard</h1>
+                                                <h1 class="h4 mb-0 text-uppercase"
+                                                    style="color:var(--headertext-theme1)">Dashboard</h1>
                                                 <div class="d-none d-sm-inline-block btn btn-sm shadow-sm card"><i
                                                         class="fas fa-clock fa-sm"></i> Data Last Reload : <span
                                                         class="reloadTime">
@@ -287,12 +291,13 @@
                                         aria-labelledby="nav-analytics-tab">
                                         <!-- Page Heading -->
                                         <div class="d-sm-flex align-items-center justify-content-between mb-4">
-                                            <h1 class="h4 mb-0 text-uppercase" style="color:var(--headertext-theme1)">Analytics</h1>
+                                            <h1 class="h4 mb-0 text-uppercase" style="color:var(--headertext-theme1)">
+                                                Analytics</h1>
                                             <div class="d-none d-sm-inline-block btn btn-sm shadow-sm card"><i
-                                                        class="fas fa-clock fa-sm"></i> Data Last Reload : <span
-                                                        class="reloadTime">
-                                                        <div class="Loader"></div>
-                                                    </span></div>
+                                                    class="fas fa-clock fa-sm"></i> Data Last Reload : <span
+                                                    class="reloadTime">
+                                                    <div class="Loader"></div>
+                                                </span></div>
                                         </div>
                                         <!-- ./End Page Heading -->
                                         <div class="row margin-bottom-30">
@@ -323,24 +328,29 @@
                                         aria-labelledby="nav-table-tab">
                                         <!-- Page Heading -->
                                         <div class="d-sm-flex align-items-center justify-content-between mb-4">
-                                            <h1 class="h4 mb-0 text-uppercase" style="color:var(--headertext-theme1)">Table</h1>
-                                           <div class="d-none d-sm-inline-block btn btn-sm shadow-sm card"><i
-                                                        class="fas fa-clock fa-sm"></i> Data Last Reload : <span
-                                                        class="reloadTime">
-                                                        <div class="Loader"></div>
-                                                    </span></div>
+                                            <h1 class="h4 mb-0 text-uppercase" style="color:var(--headertext-theme1)">
+                                                Table</h1>
+                                            <div class="d-none d-sm-inline-block btn btn-sm shadow-sm card"><i
+                                                    class="fas fa-clock fa-sm"></i> Data Last Reload : <span
+                                                    class="reloadTime">
+                                                    <div class="Loader"></div>
+                                                </span></div>
                                         </div>
                                         <!-- ./End Page Heading -->
                                         <div class="row margin-bottom-30">
-					 <button title="Export Excel" id="ExportButton1" style="padding-left: 0.75rem;background: none;border: none;cursor: pointer;"><i class="fas fa-file-export"></i></button>
+                                            <button title="Export Excel" id="ExportButton1"
+                                                style="padding-left:1rem;background: none;border: none;cursor: pointer;"><i
+                                                    class="fas fa-file-export"></i></button>
                                             <div class="col-xl-12 col-lg-12 margin-bottom-30" style="height: 500px">
                                                 <!-- Chart 10 -->
                                                 <div id="QVChart10" class="qvplaceholder">
                                                     <div class="Loader"></div> TBA
                                                 </div>
                                             </div>
-					<button title="Export Excel" id="ExportButton2" style="padding-left: 0.75rem;background: none;border: none;cursor: pointer;"><i class="fas fa-file-export"></i></button>
-                                           <div class="col-xl-12 col-lg-12" style="height: 500px">
+                                            <button title="Export Excel" id="ExportButton2"
+                                                style="padding-left:1rem;background: none;border: none;cursor: pointer;"><i
+                                                    class="fas fa-file-export"></i></button>
+                                            <div class="col-xl-12 col-lg-12" style="height: 500px">
                                                 <!-- Chart 11 -->
                                                 <div id="QVChart11" class="qvplaceholder">
                                                     <div class="Loader"></div> TBA
@@ -348,6 +358,9 @@
                                             </div>
                                         </div>
                                     </div> <!-- ./End Third Tab Content : Table -->
+
+
+
                                 </div> <!-- ./End Tab Content -->
                             </section>
                         </div>
@@ -526,5 +539,7 @@
     </div>
     <!-- ************************************************** ./End Bookmark Modal ********************************************** -->
     <!-- ************************************************* ./End Body Section ************************************************* -->
+
 </body>
+
 </html>
