--- a/K&Etemplate.html
+++ b/K&Etemplate.html
@@ -445,7 +445,7 @@
             </div>
             <!-- ./End Filter Panel Header -->
             <!-- Tab Content [Filters/Selections] -->
-            <div class="tab-content" id="pills-tabContent">
+            <div class="tab-content filterpaneScroll" id="pills-tabContent">
                 <div class="tab-pane fade show active" id="pills-filters" role="tabpanel"
                     aria-labelledby="pills-filters-tab">
                     <!-- Filters Tab Content-->
