--- a/K&Etemplate.html
+++ b/K&Etemplate.html
@@ -140,7 +140,7 @@
                                             <div class="d-sm-flex align-items-center justify-content-between mb-4">
                                                 <h1 class="h4 mb-0 text-uppercase"
                                                     style="color:var(--headertext-theme1)">Dashboard</h1>
-                                                <div class="d-sm-flex align-items-center justify-content-between mb-4">
+                                                <div class="d-sm-flex align-items-center justify-content-between">
                                                     <button class="clearAll-button"
                                                         style="height: 30px;padding: 8px 10px 10px;margin-right: 10px;">
                                                         <span class="add-to-cart" title="Clear All Selections"
@@ -254,13 +254,13 @@
                                         <div class="row margin-bottom-30">
                                             <!-- Chart 1 -->
                                             <div class="col-xl-4 col-lg-5" style="height: 500px">
-                                                <div id="QVChart01" class="qvplaceholder">
+                                                <div class="qvplaceholder" id="QVChart01">
                                                     <div class="Loader"></div> TBA
                                                 </div>
                                             </div>
                                             <!-- Chart 2 -->
                                             <div class="col-xl-8 col-lg-7" style="height: 500px">
-                                                <div id="QVChart02" class="qvplaceholder">
+                                                <div class="qvplaceholder" id="QVChart02">
                                                     <div class="Loader"></div> TBA
                                                 </div>
                                             </div>
@@ -269,13 +269,13 @@
                                             <div class="col-lg-6 mb-4">
                                                 <div class="mb-4" style="height: 500px">
                                                     <!-- Chart 3 -->
-                                                    <div id="QVChart03" class="qvplaceholder">
+                                                    <div class="qvplaceholder" id="QVChart03">
                                                         <div class="Loader"></div> TBA
                                                     </div>
                                                 </div>
                                                 <div class="mb-4" style="height: 500px">
                                                     <!-- Chart 4 -->
-                                                    <div id="QVChart04" class="qvplaceholder">
+                                                    <div class="qvplaceholder" id="QVChart04">
                                                         <div class="Loader"></div> TBA
                                                     </div>
                                                 </div>
@@ -283,13 +283,13 @@
                                             <div class="col-lg-6 mb-4">
                                                 <div class="mb-4" style="height: 500px">
                                                     <!-- Chart 5 -->
-                                                    <div id="QVChart05" class="qvplaceholder">
+                                                    <div class="qvplaceholder" id="QVChart05">
                                                         <div class="Loader"></div> TBA
                                                     </div>
                                                 </div>
                                                 <div class="mb-4" style="height: 500px">
                                                     <!-- Chart 6 -->
-                                                    <div id="QVChart06" class="qvplaceholder">
+                                                    <div class="qvplaceholder" id="QVChart06">
                                                         <div class="Loader"></div> TBA
                                                     </div>
                                                 </div>
@@ -324,20 +324,20 @@
                                             <div class="col-xl-8 col-lg-7">
                                                 <div class="mb-4" style="height: 500px">
                                                     <!-- Chart 7 -->
-                                                    <div id="QVChart07" class="qvplaceholder">
+                                                    <div class="qvplaceholder" id="QVChart07">
                                                         <div class="Loader"></div> TBA
                                                     </div>
                                                 </div>
                                                 <div class="mb-4" style="height: 500px">
                                                     <!-- Chart 8 -->
-                                                    <div id="QVChart08" class="qvplaceholder">
+                                                    <div class="qvplaceholder" id="QVChart08">
                                                         <div class="Loader"></div> TBA
                                                     </div>
                                                 </div>
                                             </div>
                                             <div class="col-xl-4 col-lg-5" style="height: 500px">
                                                 <!-- Chart 9 -->
-                                                <div id="QVChart09" class="qvplaceholder">
+                                                <div class="qvplaceholder" id="QVChart09">
                                                     <div class="Loader"></div> TBA
                                                 </div>
                                             </div>
@@ -373,7 +373,7 @@
                                                     class="fas fa-file-export"></i></button>
                                             <div class="col-xl-12 col-lg-12 margin-bottom-30" style="height: 500px">
                                                 <!-- Chart 10 -->
-                                                <div id="QVChart10" class="qvplaceholder">
+                                                <div class="qvplaceholder" id="QVChart10">
                                                     <div class="Loader"></div> TBA
                                                 </div>
                                             </div>
@@ -451,47 +451,47 @@
                     <!-- Filters Tab Content-->
                     <div class="bs-canvas-content px-3 py-5" style="padding-top: 1rem!important;">
                         <div class="filterObject">
-                            <div id="QV01" class="qvplaceholder margin-bottom-30">
+                            <div class="margin-bottom-30 qvplaceholder" id="QV01">
                                 <div class="Loader"></div> TBA
                             </div>
-                            <div id="QV02" class="qvplaceholder margin-bottom-30">
+                            <div class="margin-bottom-30 qvplaceholder" id="QV02">
                                 <div class="Loader"></div> TBA
                             </div>
-                            <div id="QV03" class="qvplaceholder margin-bottom-30">
+                            <div class="margin-bottom-30 qvplaceholder" id="QV03">
                                 <div class="Loader"></div> TBA
                             </div>
-                            <div id="QV04" class="qvplaceholder margin-bottom-30">
+                            <div class="margin-bottom-30 qvplaceholder" id="QV04">
                                 <div class="Loader"></div> TBA
                             </div>
-                            <div id="QV05" class="qvplaceholder margin-bottom-30">
+                            <div class="margin-bottom-30 qvplaceholder" id="QV05">
                                 <div class="Loader"></div> TBA
                             </div>
                         </div>
                         <div class="filterObject">
-                            <div id="QV06" class="margin-bottom-30 qvplaceholder">
+                            <div class="margin-bottom-30 qvplaceholder" id="QV06">
                                 <div class="Loader"></div> TBA
                             </div>
-                            <div id="QV07" class="qvplaceholder margin-bottom-30">
+                            <div class="margin-bottom-30 qvplaceholder" id="QV07">
                                 <div class="Loader"></div> TBA
                             </div>
-                            <div id="QV08" class="margin-bottom-30 qvplaceholder">
+                            <div class="margin-bottom-30 qvplaceholder" id="QV08">
                                 <div class="Loader"></div> TBA
                             </div>
-                            <div id="QV10" class="qvplaceholder margin-bottom-30">
+                            <div class="qvplaceholder margin-bottom-30" id="QV10">
                                 <div class="Loader"></div> TBA
                             </div>
-                            <div id="QV11" class="margin-bottom-30 qvplaceholder">
+                            <div class="qvplaceholder margin-bottom-30" id="QV11">
                                 <div class="Loader"></div> TBA
                             </div>
-                            <div id="QV12" class="qvplaceholder margin-bottom-30">
+                            <div class="qvplaceholder margin-bottom-30" id="QV12">
                                 <div class="Loader"></div> TBA
                             </div>
-                            <div id="QV13" class="margin-bottom-30 qvplaceholder">
+                            <div class="qvplaceholder margin-bottom-30" id="QV13">
                                 <div class="Loader"></div> TBA
                             </div>
                         </div>
                         <div class="filterObjectExt margin-bottom-30">
-                            <div id="QV14" class="qvplaceholder">
+                            <div class="qvplaceholder margin-bottom-30" id="QV14">
                                 <div class="Loader"></div> TBA
                             </div>
                         </div>
@@ -571,6 +571,8 @@
     </div>
     <!-- ************************************************** ./End Bookmark Modal ********************************************** -->
     <!-- ************************************************* ./End Body Section ************************************************* -->
+
+
 
 </body>
 
